--- a/BACKEND_)/.env.example
+++ b/BACKEND_)/.env.example
@@ -1,3 +1,3 @@
 # OpenAI API key for RAG-based chatbot
-OPENAI_API_KEY=""
+# OPENAI_API_KEY=""
 # Add any other API keys or configuration variables here 
